--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -5,6 +5,14 @@
 "stations" : [
 
 {  
+name:"TTT",
+image:"",
+url:"http://trex.8kott.xyz:80/play/live.php?mac=00:1A:79:c3:87:37&stream=1608071&extension=ts",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
 name:"START-402 ฮอนโจ ซูซุ",
 image:"https://fourhoi.com/start-402/cover-n.jpg",
 url:"https://surrit.com/44fd99e0-6121-4435-b3d3-4a2e7a13d5ba/1080p/video.m3u8",
