--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -7,7 +7,23 @@
 {  
 name:"TTT",
 image:"",
-url:"http://trex.8kott.xyz:80/play/live.php?mac=00:1A:79:c3:87:37&stream=1608071&extension=ts",
+url:"http://line.linehunt.org:80/play/live.php?mac=00:1A:79:e7:a9:33&stream=1641636&extension=ts",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"TTT2",
+image:"",
+url:"http://line.linehunt.org:80/play/live.php?mac=00:1A:79:61:98:52&stream=1641636&extension=ts",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"TTT3",
+image:"",
+url:"http://line.linehunt.org:80/play/live.php?mac=00:1A:79:76:4f:96&stream=1641636&extension=ts",
 "referer": "https://missav.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
