--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -5,26 +5,66 @@
 "author": "[<อัพเดท:10.08.2568:10.00>]",
 "stations" : [
 
+ {  
+name:"CHUC-146 Yui hatano",
+image:"https://fourhoi.com/chuc-146/cover-n.jpg",
+url:"https://surrit.com/6879c220-b973-4218-9ddf-bd2eedb62594/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
 {  
-name:"TTT",
-image:"",
-url:"http://line.linehunt.org:80/play/live.php?mac=00:1A:79:e7:a9:33&stream=1641636&extension=ts",
+name:"FNS-092 ASMR Rin Hachimutsu",
+image:"https://fourhoi.com/fns-092/cover-n.jpg",
+url:"https://surrit.com/315ef6ef-0a3f-4f53-bdb1-f35fa2fc78ea/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+{  
+name:"SHKD-389 Yui Hatano",
+image:"https://fourhoi.com/shkd-389/cover-n.jpg",
+url:"https://surrit.com/4ff0f545-b078-4fe2-abe0-391318248a63/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+{  
+name:"PSSD-330 Best of Maria Ozawa",
+image:"https://fourhoi.com/pssd-330/cover-n.jpg",
+url:"https://surrit.com/3cb47a23-c34b-4526-84cc-ba654a8e794e/842x480/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+{  
+name:"CWPBD-046 CATWALK POISON 46 : อาเมริ อิจิโนเสะ",
+image:"https://fourhoi.com/cwpbd-046/cover-n.jpg",
+url:"https://surrit.com/6abc47e1-0bcc-4248-9810-bee5e2bb5742/720p/video.m3u8",
 "referer": "https://missav.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
 {  
-name:"TTT2",
-image:"",
-url:"http://line.linehunt.org:80/play/live.php?mac=00:1A:79:61:98:52&stream=1641636&extension=ts",
+name:"START-380 ฮอนโจ ซูซุ",
+image:"https://fourhoi.com/start-380/cover-t.jpg",
+url:"https://surrit.com/10eb62e4-c195-4fee-bf61-ff2e4245bd21/1080p/video.m3u8",
 "referer": "https://missav.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
 {  
-name:"TTT3",
-image:"",
-url:"http://line.linehunt.org:80/play/live.php?mac=00:1A:79:76:4f:96&stream=1641636&extension=ts",
+name:"START-333 ฮอนโจ ซูซุ",
+image:"https://fourhoi.com/start-333-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/82c57860-5f07-4b51-9ede-885f7683c376/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+{  
+name:"START-257 โยทสึบะ โคมินาโตะ",
+image:"https://fourhoi.com/start-257-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/c60d5afc-f6e0-408c-b12f-572936cbd657/1080p/video.m3u8",
 "referer": "https://missav.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
