--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -4,7 +4,31 @@
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexxxxxter.html", 
 "author": "[<อัพเดท:10.08.2568:10.00>]",
 "stations" : [
-
+ 
+{  
+name:"HAVD-794 Yui hatano",
+image:"https://fourhoi.com/havd-794/cover-n.jpg",
+url:"https://surrit.com/ada447e2-7535-4dbb-8d33-2e4226fb4bfe/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+{  
+name:"NATR-131 Yui hatano",
+image:"https://fourhoi.com/natr-131/cover-n.jpg",
+url:"https://surrit.com/3f41f709-024d-4745-b81e-c5da6004b653/842x480/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+ {  
+name:"HAVD-779 Yui hatano",
+image:"https://fourhoi.com/havd-779/cover-n.jpg",
+url:"https://surrit.com/b79e5170-9aea-431e-ab25-40da1c3562fa/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
  {  
 name:"CHUC-146 Yui hatano",
 image:"https://fourhoi.com/chuc-146/cover-n.jpg",
