--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -4,7 +4,23 @@
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexxxxxter.html", 
 "author": "[<อัพเดท:10.08.2568:10.00>]",
 "stations" : [
- 
+
+ {  
+name:"WAAA-576 ชิรามิเนะ มิอุ",
+image:"https://fourhoi.com/waaa-576/cover-n.jpg",
+url:"https://surrit.com/fd987dff-62df-4f64-9670-ccd491cb77a5/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+ {  
+name:"ATID-641 ชิรามิเนะ มิอุ",
+image:"https://fourhoi.com/atid-641/cover-n.jpg",
+url:"https://surrit.com/955d6f9b-d2b8-44d4-9903-0cc2738e7dfd/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
 {  
 name:"HAVD-794 Yui hatano",
 image:"https://fourhoi.com/havd-794/cover-n.jpg",
