--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -8,9 +8,34 @@
 
  "stations": [
 
-
-
-
+{ 
+"name": "MonoMax 1", 
+"image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://cdn1.googlecdn.live/4k/monomax1/chunks.m3u8", 
+"referer": "https://99dooball.com/", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36" 
+},
+{ 
+"name": "MonoMax 1", 
+"image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://dkl-c33es.cdn.akamaiz.com/dooballfree24hr/monomax1/playlist.m3u8", 
+"referer": "https://99dooball.com/", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36" 
+},
+{ 
+"name": "MonoMax 1", 
+"image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://github.com/cattviptv2605/m3u8/raw/refs/heads/main/MONOMAX1.m3u8", 
+"referer": "https://99dooball.com/", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36" 
+},
+{ 
+"name": "MonoMax 1", 
+"image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
+"url": "https://cdn1.googlecdnforstreaming.live/live/monomax1/chunks.m3u8", 
+"referer": "https://99dooball.com/", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36" 
+},
 { 
 "name": "MonoMax 1", 
 "image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0", 
@@ -661,6 +686,7 @@
 
 ]
 }
+
 
 
 
