--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -5,6 +5,22 @@
 "author": "[<อัพเดท:10.08.2568:10.00>]",
 "stations" : [
 
+  {  
+name:"DLDSS-424 นาโฮะ โอซาวะ",
+image:"https://fourhoi.com/dldss-424/cover-n.jpg",
+url:"https://surrit.com/cb6ded14-7578-453a-a8ed-dc3d7ad6387d/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+  {  
+name:"SAME-200 ยูริ ฮิโรเสะ",
+image:"https://fourhoi.com/same-200/cover-n.jpg",
+url:"https://surrit.com/7de9c46e-0f1f-4aad-9891-fc15939731c5/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
  {  
 name:"WAAA-576 ชิรามิเนะ มิอุ",
 image:"https://fourhoi.com/waaa-576/cover-n.jpg",
