--- a/test/test.html
+++ b/test/test.html
@@ -169,19 +169,26 @@
 
 
 
-{"name": "Monomax Sport-1",
+{
+"name": "Monomax Sport-1",
 "image": "https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0",
 "url": "https://freelive2.inwstream.com:1936/freelive-edge/fwsport_fw-iptv.stream/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9My8yMi8yMDI1IDM6NDY6MDEgQU0maGFzaF92YWx1ZT1ZK2c4UVJ6ajIvRDhaaThOZ1lkYkdRPT0mdmFsaWRtaW51dGVzPTI=", 
 "referer": "https://fw4free.com/",
 "info":"",
-"playInNatPlayer": "true"}
-{"name":"Monomax Sport-2", 
+"playInNatPlayer": "true"
+},
+{
+"name":"Monomax Sport-2", 
 "image":"https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0",
  "url": "https://slave02.appball.vip/hls/ch11.m3u8", 
-"playInNatPlayer":"true"},
+"playInNatPlayer":"true"
+},
+
 {"name":"Monomax Sport-4", "image":"https://play-lh.googleusercontent.com/EETWKeFRAi16PIhw6V_z6CrruCW7tFt0Z1bc0-KG5pnpoE0gLWIQS7xImsng_ujWoZ0",
  "url": "https://cdn1.googlecdn.live/4k/dklsport1/chunks.m3u8",
- "referer": "https://footballsod.live/", "playInNatPlayer": "true"},
+ "referer": "https://footballsod.live/", 
+"playInNatPlayer": "true"
+},
 
 
 
