--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -5,7 +5,47 @@
 "author": "[<อัพเดท:10.08.2568:10.00>]",
 "stations" : [
 
-  {  
+{  
+name:"KNCS-025 Anri Suzuki",
+image:"https://fourhoi.com/kncs-025/cover-n.jpg",
+url:"https://surrit.com/b0f5a1f8-e1f2-4f6c-8327-dee91210dd25/842x480/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+{  
+name:"KISD-021 kira☆kira อันริ ซูซูกิ",
+image:"https://fourhoi.com/kisd-021/cover-n.jpg",
+url:"https://surrit.com/b30d6374-8111-451e-bc19-ea9e31f3ec27/842x480/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+{  
+name:"GARA-014 ฮิบิกิ โอสึกิ",
+image:"https://fourhoi.com/gara-014/cover-n.jpg",
+url:"https://surrit.com/17317f4f-10d4-4ce9-a833-7e9f2af9dcbd/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+{  
+name:"APNS-385 ดอกคาเมลเลีย",
+image:"https://fourhoi.com/apns-385/cover-n.jpg",
+url:"https://surrit.com/6de07224-ee97-43ea-b2b4-de5b7b7d11ac/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+{  
+name:"HIKR-248 เมแกน",
+image:"https://fourhoi.com/hikr-248/cover-n.jpg",
+url:"https://surrit.com/ca7813af-e640-45c2-be7d-f954e3a1121a/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+{  
 name:"DLDSS-424 นาโฮะ โอซาวะ",
 image:"https://fourhoi.com/dldss-424/cover-n.jpg",
 url:"https://surrit.com/cb6ded14-7578-453a-a8ed-dc3d7ad6387d/1080p/video.m3u8",
