--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -6,6 +6,22 @@
 "stations" : [
 
 {  
+name:"DASD-951 Mina Kitano",
+image:"https://fourhoi.com/dasd-951-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/4c7ab3bd-0335-4cd5-ad19-6084ea84fe6c/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+{  
+name:"EKDV-667 Mina Kitano",
+image:"https://fourhoi.com/ekdv-667/cover-n.jpg",
+url:"https://surrit.com/c0c1f279-dab8-4c29-81e6-afa8137ffa6c/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+{  
 name:"KNCS-025 Anri Suzuki",
 image:"https://fourhoi.com/kncs-025/cover-n.jpg",
 url:"https://surrit.com/b0f5a1f8-e1f2-4f6c-8327-dee91210dd25/842x480/video.m3u8",
