--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -6,6 +6,22 @@
 "stations" : [
 
 {  
+name:"MEYD-734 Mina Kitano",
+image:"https://fourhoi.com/meyd-734/cover-n.jpg",
+url:"https://surrit.com/f0f4df6d-af94-45c7-a1f8-607e6474b17c/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},    
+{  
+name:"JUL-784 Mina Kitano",
+image:"https://fourhoi.com/jul-784-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/4e67aafc-3df5-48a0-b5c8-a8325a2ee5ae/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},  
+{  
 name:"DASD-951 Mina Kitano",
 image:"https://fourhoi.com/dasd-951-uncensored-leak/cover-n.jpg",
 url:"https://surrit.com/4c7ab3bd-0335-4cd5-ad19-6084ea84fe6c/1280x720/video.m3u8",
