--- a/Nexter-Backup.html
+++ b/Nexter-Backup.html
@@ -10,6 +10,35 @@
 "groups": [ 
 
 
+{
+"name": "GUFLIX มาดู มาฟัง! Nexter",
+"author": "Nexter",
+"image": "http://guflix.streaming-fast.com/logo/guflix.gif",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/GUFLIX-Nexter.html",
+"import": "true"
+},
+
+ 
+{
+"name": "Nexter-Watch-IPTV-ALL",
+"author": "Nexter",
+"image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSgnV9n5glTl6nvkfU22sh0woDFv8LvRjoVQ&usqp=CAU",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Watchlakorn.html",
+"import": "true"
+},
+
+
+
+{
+"name": "Nexter-LEGALIPTV-ALL",
+"image": "https://iili.io/23SA3jj.jpg",
+"url": "http://tiny.cc/LEGALIPTV",
+"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
+"import": false
+ },
+
+
+
 {"name": "Watchlakorn.In(ละคร)",
 "author": "PL4U-Watchlakorn.In",
 "info": "Watch Lakorn ที่สุดของคนรักละคร",
@@ -35,3 +64,4 @@
 
 ] 
 }
+
