--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -12,7 +12,7 @@
 "image": "https://cdn.imgchest.com/files/yq9c3wgpa94.gif",
 "url":"https://dl.dropboxusercontent.com/scl/fi/3haoqtq35mzjiteymld9s/Tube-Premier.txt?rlkey=5u19h4fxhoforchstrs8mtdy1&st=ug6jweaq&dl=0"},
 
-{"name":"▶️Sport Web Online⚽",
+{"name":"▶️ดูบอลผ่านเว็บ(ช่องทางสำรอง)⚽",
    "image":"https://cdn.imgchest.com/files/cd965d6d9d8a.png",
    "stations": [ 
 
@@ -816,6 +816,7 @@
 
 ]
 }
+
 
 
 
